--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "bootstrap-icons": "^1.11.3",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.6.5",
+    "toastr": "^2.1.4",
     "vue": "^3.0.0",
     "vue-router": "^4.4.3",
+    "vue-toastr": "^2.1.2",
+    "vue3-toastify": "^0.2.2",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
