--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "bootstrap-icons": "^1.11.3",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.6.5",
+    "flowbite": "^2.5.1",
+    "flowbite-vue": "^0.1.6",
     "toastr": "^2.1.4",
     "vue": "^3.0.0",
     "vue-router": "^4.4.3",
     "vue-toastr": "^2.1.2",
+    "vue-upload-component": "^3.1.17",
     "vue3-toastify": "^0.2.2",
     "vuex": "^4.1.0"
   },
