--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.6.5",
     "flowbite": "^2.5.1",
     "flowbite-vue": "^0.1.6",
+    "jwt-decode": "^4.0.0",
     "toastr": "^2.1.4",
     "vue": "^3.0.0",
     "vue-router": "^4.4.3",
